=== 1.0.0-snapshot ===
2018-02-28 David Parsley <parsley@linuxjedi.org>
  * Windows config dir search path is now only 'C:\ProgramData\Gopherbot'

2018-02-10 David Parsley <parsley@linuxjedi.org>
  * Started using Travis CI, deploying snapshot releases

2017-05-23 David Parsley <parsley@linuxjedi.org>
  * [Breaking] Fix WaitForReply - replace with Prompt(User)ForReply

    The old WaitForReply* methods had a fatal flaw - they couldn't deal
    with multiple simultaneous plugins doing WaitForReply at the same
    time. If you asked the robot to tell you a joke twice in quick
    succession, it would crash. After giving this lots of thought, I
    made the difficult decision to replace WaitForReply* with
    PromptForReply and PromptUserForReply.

    Now, The first plugin to call Prompt*ForReply will have it's
    prompt sent and reply returned; any other Prompt*ForReply won't
    have their prompts displayed, and will get RetryPrompt returned.
    The library will automatically retry three times, and will
    return Interrupted after 3 RetryPrompt - so plugins shouldn't
    check for that value.

  * [Breaking] Go plugins now return a PlugRetVal (integer), required

  * Added new type of plugin: Authorizer, for performing authorization
    decisions, using plugin return values

  * [Breaking] Elevators are now normal plugins, and configured with normal
    plugin "Config:" stanza. See Configuration.md for information on configuring
    elevators.

=== Released 0.9.0 ===

2017-05-01 David Parsley <parsley@linuxjedi.org>

  * Add links plugin, fix and improve lists plugin

  * Fixed scrolling in Slack by adding message sending pause; also added
  typing notifier

2017-04-21 David Parsley <parsley@linuxjedi.org>

  * The list of Users for a plugin can now contain globbing patterns

  * All libraries now use a 'gopherbot_vX.foo' name format, in preparation
  for future versions of plugin libraries
